# face_recognition

./: .gitignore  README.md  main.ipynb  main.py  pyproject.toml  requirements.txt
configs/: example_config.yml
face_recognition/: __init__.py  converters.py  data_utils.py  datasets.py  io.py  parser.py  processors.py  trainer.py  transforms.py
face_recognition/nets/: __init__.py  simple.py
src/: main.ipynb
src/utils/: __init__.py  data_utils.py  datasets.py  processors.py  transforms.py
tools/: build_celeba_dataset.py
