[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "face_recognition"
version = "1.0.0"
requires-python = ">= 3.11"
dependencies = [
    "torch",
    "torchvision", 
    "numpy",
    "pyyaml",
    "plotly",
    "tqdm",
    "mediapipe",
    "albumentations",
    "click",
    "gdown",
    "py7zr"
]
[project.optional-dependencies]
dev = [
    "flake8",
    "black",
    "pytest",
]

[tool.setuptools.packages.find]
where = ["face_recognition"]